1.fix display issue on Safari. 2. Make tweet more responsive.

--- a/static/css/one.css
+++ b/static/css/one.css
@@ -57,10 +57,12 @@ body {
     flex-direction: row;
     -webkit-flex-direction: row;
     justify-content: center;
+    height: 2.5em;
 }
 
 .menu-item {
     font-size: 1em;
+    height: 2.5em;
 }
 
 .menu-item a {
@@ -85,6 +87,7 @@ body {
 
 .posts {
     margin: 1em auto;
+    align-self: center;
 }
 
 .about {
@@ -111,7 +114,6 @@ body {
 
 .tweet {
     max-width: 500px;
-    min-width: 320px;
 }
 
 .tweet code {
@@ -130,7 +132,7 @@ body {
     -webkit-box-shadow: 0 0 5px #555;
 
     height: auto;
-    max-width: 320px;
+    max-width: 400px;
 }
 
 .tweet p {
@@ -217,6 +219,26 @@ body {
     font-family: "Source Code Pro";
     font-size: 2.5em;
     color: #5F9EA0;
+}
+
+@media only screen and (max-device-width: 320px) {
+    .tweet {
+        max-width: 220px;
+    }
+
+    .tweet > p > img {
+        max-width: 180px;
+    }
+}
+
+@media only screen and (max-device-width: 480px) {
+    .tweet {
+        max-width: 400px;
+    }
+
+    .tweet > p > img {
+        max-width: 320px;
+    }
 }
 
 @media only screen and (max-device-width: 600px) {
